practice happy path

--- a/core/static/css/authenticated/home/parent.css
+++ b/core/static/css/authenticated/home/parent.css
@@ -1,19 +1,16 @@
 .parent-child-header {
     margin-bottom:30px;
     margin-top: 30px;
-    font-family: "Helvetica Neue", sans-serif;
+    font-family: "Helvetica", sans-serif;
     color: cadetblue;
     font-weight: 400;
 }
 
 #parent-home-body > .parent-child-container {
-    border-top: 2px solid rgb(124, 124, 124);
+    border-top: 2px solid rgba(124, 124, 124, 0.3);
     margin-top: 50px;
-    padding-top: 10px;
 }
 
 #parent-home-body > .parent-child-container:first-child {
-    border-top:none;
-    margin-top:0px;
-    padding-top: 0px;
+    margin-top: -5px;
 }
