--- a/core/static/css/login.css
+++ b/core/static/css/login.css
@@ -29,7 +29,7 @@
     padding-right: 45px;
     padding-top:10px;
     padding-bottom: 10px;
-    font-family: proxima-nova, "Helvetica Neue", Arial, sans-serif;
+    font-family: proxima-nova, Arial, sans-serif;
     font-size: 15px;
     margin-bottom: 15px;
     margin-top: 20px;
@@ -62,10 +62,8 @@
 }
 
 @media screen and (max-width: 600px){
-    
-#logindiv {
-    padding-left:0px;
-    padding-top:0px;
+
+    #logindiv {;
     margin-left: 0px;
     margin-top: 0px;
     padding:10px;
