--- a/core/static/css/authenticated/base.css
+++ b/core/static/css/authenticated/base.css
@@ -5,7 +5,7 @@ table td a {
 
 /* Headers */
 .header{
-    font-family: Georgia, serif;
+    font-family: "Helvetica", sans-serif;;
     color: #000;
     font-weight: 100;
     margin-bottom: 10px;
@@ -21,7 +21,7 @@ table td a {
 }
 
 .header4 {
-    font-size: 35px;
+    font-size: 32px;
     margin-bottom: 10px;
     color:#008B8B;
 }
