--- a/core/static/css/authenticated/userinfo.css
+++ b/core/static/css/authenticated/userinfo.css
@@ -76,7 +76,7 @@
     font-size: 13px;
     position: absolute;
     right: 6px;
-    font-family: "Helvetica Neue";
+    font-family: "Helvetica", sans-serif;
 }
 
 #announcements_container .announcement_source {
@@ -86,7 +86,7 @@
 
 #announcements_container .announcement_message {
     font-size: 16px;
-    font-family: Georgia;
+    font-family: Arial, sans-serif;
     color: rgba(0, 0, 0, 0.59);
     margin-top: 5px;
 }
