--- a/core/templates/authenticated/assignments_table/base.html
+++ b/core/templates/authenticated/assignments_table/base.html
@@ -13,7 +13,8 @@
                 <th class="regularcol">Assignment</th>
                 <th>Subject</th>
                 {% block infix_column_header %}{% endblock infix_column_header %}
-                <th class="regularcol">Due At</th>
+                {% block due_column_header %}
+                    <th class="regularcol">Due At</th>{% endblock due_column_header %}
                 {% block suffix_column_header %}{% endblock suffix_column_header %}
             </tr>
             </thead>
@@ -21,13 +22,19 @@
             <tbody>
             {% for assignment in assignments %}
                 <tr>
-                    <td class='assign_title'>{% block title_column_data %}
-                        {% include 'authenticated/widgets/link.html' with title="Open this assignment" link=assignment.title only %}{% endblock title_column_data %}</td>
-                    <td>{% block subject_column_data %}
+                    <td class='assign_title'>
+                        {% block title_column_data %}
+                            {% include 'authenticated/widgets/link.html' with title="Open this assignment" link=assignment.title only %}
+                        {% endblock title_column_data %}
+                    </td>
+                    <td>
+                        {% block subject_column_data %}
                         {% include 'authenticated/widgets/link.html' with title="Go to subjectroom "|add_str:assignment.subject.label link=assignment.subject only %}
-                        </td>{% endblock subject_column_data %}
+                        {% endblock subject_column_data %}
+                    </td>
                     {% block infix_column_data %}{% endblock infix_column_data %}
-                    <td>{{ assignment.due }}</td>
+                    {% block due_column_data %}
+                        <td>{{ assignment.due }}</td>{% endblock due_column_data %}
                     {% block suffix_column_data %}{% endblock suffix_column_data %}
                 </tr>
             {% empty %}
