--- a/core/templates/authenticated/home/teacher.html
+++ b/core/templates/authenticated/home/teacher.html
@@ -2,13 +2,13 @@
 
 {% load staticfiles %}
 
+{% block home_ribbon %}
+    {% include "authenticated/widgets/ribbon_buttons/assignment_create.html" only %}
+    {% include "authenticated/widgets/ribbon_buttons/announcement_create.html" only %}
+{% endblock home_ribbon %}
+
 {% block home_body %}
     <div class='row'>
-        <div id="ribbon" class="row">
-            {% include "authenticated/widgets/ribbon_buttons/assignment_create.html" only %}
-            {% include "authenticated/widgets/ribbon_buttons/announcement_create.html" only %}
-            {% include "authenticated/widgets/ribbon_buttons/advanced_analytics.html" only %}
-        </div>
         {% include "authenticated/charts/subjectroom_performance_breakdown.html" only %}
         {% include "authenticated/charts/standard_assignment_performance_popup.html" only %}
         {% include "authenticated/charts/assignment_completion_popup.html" only %}
