--- a/core/templates/authenticated/submission_id/assignment_info.html
+++ b/core/templates/authenticated/submission_id/assignment_info.html
@@ -1,5 +1,5 @@
 <span id="assignment_info">
     <span id="assignment_due">
-        <span class="due-text">Due:&nbsp;{{ assignment_info.due }}</span>
+        <span class="due-text">{{ assignment_info.due }}</span>
     </span>
 </span>
