--- a/core/templates/authenticated/widgets/ribbon_buttons/advanced_analytics.html
+++ b/core/templates/authenticated/widgets/ribbon_buttons/advanced_analytics.html
@@ -1,6 +1,6 @@
 <div class="ribbon-button">
     <a id="advanced-analytics-button" class="no-decoration hwcentral_action_button" title="View Advanced Analytics" href="{% url 'edge_index' %}">
-        View Analytics
+        Analytics
     </a>
 </div>
 
