--- a/core/templates/authenticated/widgets/ribbon_buttons/announcement_create.html
+++ b/core/templates/authenticated/widgets/ribbon_buttons/announcement_create.html
@@ -1,3 +1,4 @@
 <div class="ribbon-button">
-    <a title="Click here to make an announcement" id='announcement-create-button' class="no-decoration hwcentral_action_button" href="{% url 'announcement' %}">Make an Announcement</a>
+    <a title="Click here to make an announcement" id='announcement-create-button'
+       class="no-decoration hwcentral_action_button" href="{% url 'announcement' %}">Make Announcement</a>
 </div>
