--- a/hwcentral/static/css/header.css
+++ b/hwcentral/static/css/header.css
@@ -1,6 +1,6 @@
 .listoptions li{
 	font-size: 20px;
-	font-family: "Helvetica", san-serif;
+	font-family: "Helvetica", sans-serif;
 }
 
 #headerlogo{
