ribbon buttons bigger

--- a/core/static/css/authenticated/home/base.css
+++ b/core/static/css/authenticated/home/base.css
@@ -17,6 +17,6 @@
     margin-bottom: 30px;
 }
 
-.ribbon-button.hwcentral_action_button > a {
+.ribbon-button > a.hwcentral_action_button {
     padding: 15px 40px;
 }
