--- a/core/templates/authenticated/assignment.html
+++ b/core/templates/authenticated/assignment.html
@@ -52,7 +52,8 @@
 
                 <div id="actionrow">
                 <a title="Generate a read-only preview of the assignment in the format it will be provided to students"
-                   class="no-decoration hwcentral_action_button disabled_action_button" id="preview_link">
+                   class="no-decoration hwcentral_action_button disabled_action_button" id="preview_link"
+                   target="_blank">
                     Preview HomeWork
                 </a>
                 <input id='submit_button' class='hwcentral_action_button no-decoration'
