--- a/core/templates/authenticated/home/video_modal.html
+++ b/core/templates/authenticated/home/video_modal.html
@@ -1,5 +1,9 @@
 {% extends 'modal.html' %}
 
+{% block extra_modal_class %}
+    video-modal
+{% endblock extra_modal_class %}
+
 {% block content %}
     <div class="embed-responsive embed-responsive-16by9">
         <iframe id="modal-vid" class="embed-responsive-item"
