--- a/core/templates/authenticated/userinfo.html
+++ b/core/templates/authenticated/userinfo.html
@@ -24,9 +24,18 @@
 </li>
     <li>
     <div class="userinfo_elem_container">
+        <a title="View Help Video" id="help-button" class="userinfo_link">
+            <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+            <span>Help</span>
+        </a>
+    </div>
+    </li>
+    <li>
+        <div class="userinfo_elem_container">
         <a title="Log Out" id="logout_header_link" href="{% url 'logout' %}" class="userinfo_link">Log Out </a>
     </div>
     </li>
 </ul>
+
 
 
