--- a/hwcentral/templates/modal.html
+++ b/hwcentral/templates/modal.html
@@ -1,4 +1,4 @@
-<div id="{{ modal_id }}" class="modal fade" role="dialog">
+<div id="{{ modal_id }}" class="modal fade {% block extra_modal_class %}{% endblock extra_modal_class %}" role="dialog">
   <div class="modal-dialog">
 
     <!-- Modal content-->
