redirect changed to open in new tab

--- a/core/static/css/authenticated/base.css
+++ b/core/static/css/authenticated/base.css
@@ -204,3 +204,13 @@ a{
     padding: 7px;
     font-size: 14px;
 }
+
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Chrome/Safari/Opera */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE/Edge */
+    user-select: none;
+    /* non-prefixed version, currently
+                           not supported by any browser */
+}
