--- a/core/templates/authenticated/userinfo.html
+++ b/core/templates/authenticated/userinfo.html
@@ -2,7 +2,7 @@
 <li id="announcements_elem">
     <div class="userinfo_elem_container">
     <div class="dropdown" id="announcements_dropdown_container">
-        <a id="announcements_button" title="Check recent announcements" class="dropdown-toggle userinfo_link"
+        <a id="announcements_button" title="Check recent announcements" class="noselect dropdown-toggle userinfo_link"
            data-toggle="dropdown">
             <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
             <span id="announcement_count">{{ userinfo.announcement_count }}</span>
