--- a/sphinx/templates/sphinx/modules/fraction.html
+++ b/sphinx/templates/sphinx/modules/fraction.html
@@ -1,2 +1,8 @@
-<p>Numerator - Enter an integer range (eg:1,20) <input type="text" name="var_numerator"></p>
-<p>Denominator - Enter an integer range (eg:1,20) <input type="text" name="var_denominator"><br></p>
+<div>
+    <label>Numerator - Enter an integer range (eg:1,20) </label>
+    <input type="text" name="var_numerator">
+</div>
+<div>
+    <label>Denominator - Enter an integer range (eg:1,20) </label>
+    <input type="text" name="var_denominator">
+</div>
