--- a/sphinx/templates/sphinx/modules/mcmaq.html
+++ b/sphinx/templates/sphinx/modules/mcmaq.html
@@ -1,34 +1,38 @@
-<h3>Correct Answers</h3>
-<select id="MCMAQcorrectselect" onChange="MCMAQcorrect(this.value)">
-    <option value="0">Select Number of Correct Answers</option>
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4">4</option>
-    <option value="5">5</option>
-    <option value="6">6</option>
-    <option value="7">7</option>
-    <option value="8">8</option>
-    <option value="9">9</option>
-    <option value="10">10</option>
-</select>
-<div id="MCMAQcorrect">
-
+<div id="mcmaq_correct_block" class="options_block">
+    <h4>Correct Answers</h4>
+    <select id="MCMAQcorrectselect" onChange="MCMAQcorrect(this.value)">
+        <option value="0"># of Correct Answers</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+        <option value="8">8</option>
+        <option value="9">9</option>
+        <option value="10">10</option>
+    </select>
+    <div id="MCMAQcorrect">
+    </div>
 </div>
-<h3>Incorrect Answers</h3>
-<select id="MCMAQincorrectselect" onChange="MCMAQincorrect(this.value)">
-    <option value="0">Select Number of Incorrect Answers</option>
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4">4</option>
-    <option value="5">5</option>
-    <option value="6">6</option>
-    <option value="7">7</option>
-    <option value="8">8</option>
-    <option value="9">9</option>
-    <option value="10">10</option>
-</select>
-<div id="MCMAQincorrect">
 
+<div id="mcmaq_incorrect_block" class="options_block">
+    <h4>Incorrect Answers</h4>
+    <select id="MCMAQincorrectselect" onChange="MCMAQincorrect(this.value)">
+        <option value="0"># of Incorrect Answers</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+        <option value="8">8</option>
+        <option value="9">9</option>
+        <option value="10">10</option>
+    </select>
+    <div id="MCMAQincorrect">
+
+    </div>
 </div>
