--- a/sphinx/templates/sphinx/modules/mcsaq.html
+++ b/sphinx/templates/sphinx/modules/mcsaq.html
@@ -1,29 +1,35 @@
-<br>
-<select id="radOrDrop">
-    <option value="radio">Radio Buttons</option>
-    <option value="drop">Drop Down</option>
-</select>
-<br>
-<h3>Correct Answer</h3>
-<div id="MCSAQcorrect" class="subDiv">
-    {% include 'sphinx/modules/mcqoption.html' %}
+<div id="mcsaq_format">
+    <label>Format:</label>
+    <select id="radOrDrop">
+        <option value="radio">Radio Buttons</option>
+        <option value="drop">Drop Down</option>
+    </select>
 </div>
-<hr>
-<h3>Incorrect Answers</h3>
 
-<select id="MCSAQincorrectselect" onChange="MCSAQincorrect(this.value)">
-    <option value="0">Select Number of Incorrect Answers</option>
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4">4</option>
-    <option value="5">5</option>
-    <option value="6">6</option>
-    <option value="7">7</option>
-    <option value="8">8</option>
-    <option value="9">9</option>
-    <option value="10">10</option>
-</select>
-<div id="MCSAQincorrect">
+<div id="mcsaq_correct_block" class="options_block">
+    <h4>Correct Answer</h4>
+    <div id="MCSAQcorrect">
+        {% include 'sphinx/modules/mcqoption.html' %}
+    </div>
+</div>
 
+<div id="mcsaq_incorrect_block" class="options_block">
+    <h4>Incorrect Answers</h4>
+    <select id="MCSAQincorrectselect" onChange="MCSAQincorrect(this.value)">
+        <option value="0"># of Incorrect Answers</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+        <option value="8">8</option>
+        <option value="9">9</option>
+        <option value="10">10</option>
+    </select>
+
+    <div id="MCSAQincorrect">
+
+    </div>
 </div>
