--- a/sphinx/templates/sphinx/modules/numerical.html
+++ b/sphinx/templates/sphinx/modules/numerical.html
@@ -1,3 +1,14 @@
-Correct Answer: <input type="text" id="correct_ans" class="longtext"><br>
-Tolerance: <input type="number" id="tolerance_ans"><br>
-Unit: <input type="text" id="unit_ans"><br>
+<div id="numerical_ans_container" class="ans_container">
+    <div>
+        <label>Correct Answer:</label>
+        <input type="text" id="correct_ans" class="longtext">
+    </div>
+    <div>
+        <label>Tolerance (optional):</label>
+        <input type="number" id="tolerance_ans">
+    </div>
+    <div>
+        <label>Unit (opitonal): </label>
+        <input type="text" id="unit_ans">
+    </div>
+</div>
