--- a/sphinx/templates/sphinx/modules/range.html
+++ b/sphinx/templates/sphinx/modules/range.html
@@ -1,3 +1,12 @@
-<p>Enter the Range to Include. Eg:15 or -20,20: <input type="text" name="var_range"></p>
-<p>Enter the Decimal Step. Eg: 2 would mean a step of 0.01 <input type="number" name="var_decimal"></p>
-<p>Enter the Range to Exclude. Eg:0 or -5,5 : <input type="text" name="var_exclude"></p>
+<div>
+    <label>Range to Include. Eg:15 or -20,20:</label>
+    <input type="text" name="var_range">
+</div>
+<div>
+    <label>Decimal Step. Eg: 2 => step of 0.01 (optional):</label>
+    <input type="number" name="var_decimal">
+</div>
+<div>
+    <label>Range to Exclude. Eg:0 or -5,5 (optional):</label>
+    <input type="text" name="var_exclude">
+</div>
