--- a/sphinx/templates/sphinx/modules/textual.html
+++ b/sphinx/templates/sphinx/modules/textual.html
@@ -1,1 +1,4 @@
-Correct Answer: <input type="text" id="textual_ans" class="longtext"><br>
+<div id="textual_ans_container" class="ans_container">
+    <label>Correct Answer:</label>
+    <input type="text" id="textual_ans" class="longtext">
+</div>
