--- a/hwcentral/static/css/index.css
+++ b/hwcentral/static/css/index.css
@@ -646,6 +646,10 @@ input{
 
 }
 
+#enquirer_form {
+    margin-top: 20px;
+}
+
 #enquirer_form ul.errorlist {
     display: inline;
     padding: 0px;   /*override default ul style*/
