--- a/sphinx/templates/sphinx/modules/options.html
+++ b/sphinx/templates/sphinx/modules/options.html
@@ -1,1 +1,4 @@
-<p>Enter the Options separated by commas. Eg:1,2,4,1 <input type="text" name="var_options" class="longtext"></p>
+<div>
+    <label>Options separated by commas. Eg:1,2,4,1:</label>
+    <input type="text" name="var_options" class="longtext">
+</div>
