--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -11,6 +11,7 @@
 
 {% block root_css %}
     <link rel="stylesheet" href="{% static 'css/index.css' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'css/index_chalkboard.css' %}" type="text/css"/>
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 {% endblock root_css %}
 
@@ -20,39 +21,9 @@
 
 {% block root_body %}
         <div id="horizontaldiv1" class="horizontaldiv">
-            <div id="popup">
-                <img id="img2" style="width:240px; position:absolute; top:120px; left:40px;" src="{% static 'img/index/chalkboard/Picture1.png' %}">
-                <img id="img3" style="width:190px; position:absolute; top:164px; left:450px;" src="{% static 'img/index/chalkboard/Picture2.png' %}">
-                <img id="img4" style="width:340px; position:absolute; top:280px; left:50px;" src="{% static 'img/index/chalkboard/Picture3.png' %}">
-                <img id="img5" style="width:300px; position:absolute; top:660px; left:1280px;" src="{% static 'img/index/chalkboard/Picture5.png' %}">
-                <img id="img6" style="width:350px; position:absolute; top:20px; left:235px;" src="{% static 'img/index/chalkboard/Picture6.png' %}">
-                <img id="img7" style="width:500px; position:absolute; top:374px; left:600px;" src="{% static 'img/index/chalkboard/Picture7.png' %}">
-                <img id="img8" style="width:190px; position:absolute; top:310px; left:1560px;" src="{% static 'img/index/chalkboard/Picture8.png' %}">
-                <img id="img9" style="width:190px; position:absolute; top:400px; left:1100px;" src="{% static 'img/index/chalkboard/Picture9.png' %}">
-                <img id="img10" style="width:190px; position:absolute; top:60px; left:640px;" src="{% static 'img/index/chalkboard/Picture10.png' %}">
-                <img id="img11" style="width:400px; position:absolute; top:185px; left:900px;" src="{% static 'img/index/chalkboard/Picture12.png' %}">
-                <img id="img12" style="width:190px; position:absolute; top:300px; left:410px;" src="{% static 'img/index/chalkboard/Picture14.png' %}">
-                <img id="img13" style="width:190px; position:absolute; top:30px; left:800px;" src="{% static 'img/index/chalkboard/Picture15.png' %}">
-                <img id="img14" style="width:250px; position:absolute; top:300px; left:1400px;" src="{% static 'img/index/chalkboard/Picture17.png' %}">
-                <img id="img15" style="width:350px; position:absolute; top:530px; left:600px;" src="{% static 'img/index/chalkboard/Picture18.png' %}">
-                <img id="img16" style="width:350px; position:absolute; top:500px; left:60px;" src="{% static 'img/index/chalkboard/Picture21.png' %}">
-                <img id="img17" style="width:350px; position:absolute; top:247px; left:600px;" src="{% static 'img/index/chalkboard/Picture23.png' %}">
-                <img id="img18" style="width:350px; position:absolute; top:475px; left:900px;" src="{% static 'img/index/chalkboard/Picture24.png' %}">
-                <img id="img19" style="width:320px; position:absolute; top:120px; left:1100px;" src="{% static 'img/index/chalkboard/Picture26.png' %}">
-                <img id="img20" style="width:250px; position:absolute; top:610px; left:770px;" src="{% static 'img/index/chalkboard/Picture28.png' %}">
-                <img id="img21" style="width:200px; position:absolute; top:30px; left:30px;" src="{% static 'img/index/chalkboard/Picture29.png' %}">
-                <img id="img22" style="width:200px; position:absolute; top:140px; left:1330px;" src="{% static 'img/index/chalkboard/Picture31.png' %}">
-                <img id="img23" style="width:350px; position:absolute; top:457px; left:1505px;" src="{% static 'img/index/chalkboard/Picture32.png' %}">
-                <img id="img24" style="width:320px; position:absolute; top:380px; left:1090px;" src="{% static 'img/index/chalkboard/Picture33.png' %}">
-                <img id="img25" style="width:350px; position:absolute; top:400px; left:20px;" src="{% static 'img/index/chalkboard/Picture34.png' %}">
-                <img id="img26" style="width:250px; position:absolute; top:30px; left:1000px;" src="{% static 'img/index/chalkboard/Picture35.png' %}">
-                <img id="img27" style="width:250px; position:absolute; top:60px; left:1300px;" src="{% static 'img/index/chalkboard/Picture36.png' %}">
-                <img id="img28" style="width:350px; position:absolute; top:530px; left:1000px;" src="{% static 'img/index/chalkboard/Picture37.png' %}">
-                <img id="img29" style="width:150px; position:absolute; top:450px; left:384px;" src="{% static 'img/index/chalkboard/Picture38.png' %}">
-                <img id="img30" style="width:350px; position:absolute; top:310px; left:950px;" src="{% static 'img/index/chalkboard/Picture39.png' %}">
-                <img id="img31" style="width:350px; position:absolute; top:600px; left:1500px;" src="{% static 'img/index/chalkboard/Picture40.png' %}">
-                <img id="img32" style="width:200px; position:absolute; top:20px; left:1600px;" src="{% static 'img/index/chalkboard/Picture41.png' %}">
-            </div>
+
+            {% include 'index_chalkboard.html' only %}
+
 
             <div id="hwcentraltop">
 
